--- a/pom.xml
+++ b/pom.xml
@@ -74,9 +74,9 @@
 		<maven.version>3.0.5</maven.version>
 
 		<!-- Java version and compiler options-->
-		<maven.compiler.source>7</maven.compiler.source>
-		<maven.compiler.target>7</maven.compiler.target>
-    <maven.compiler.fork>true</maven.compiler.fork>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.fork>true</maven.compiler.fork>
 		<maven.compiler.compilerVersion>${maven.compiler.source}</maven.compiler.compilerVersion>
 		<maven.compiler.optimize>true</maven.compiler.optimize>
 		<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
@@ -307,12 +307,12 @@
 						<configuration>
 							<rules>
 								<requireJavaVersion>
-									<version>1.[${maven.compiler.source}.0,)</version>
+									<version>[${maven.compiler.source}.0,)</version>
 								</requireJavaVersion>
 								<requireMavenVersion>
 									<version>[${maven.version},)</version>
 								</requireMavenVersion>
-							</rules>    
+							</rules>
 						</configuration>
 					</execution>
 				</executions>
