--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
 		<maven.pluginrelease.version>2.5.2</maven.pluginrelease.version>
 		<maven.pluginscmpublish.version>1.1</maven.pluginscmpublish.version>
 		<!-- Maven reporting plugins -->
-		<maven.pluginowasp.version>1.2.7</maven.pluginowasp.version>
+		<maven.pluginowasp.version>1.3.1</maven.pluginowasp.version>
 		<maven.pluginpmd.version>3.5</maven.pluginpmd.version>
 		<maven.pluginfindbugs.version>3.0.2</maven.pluginfindbugs.version>
 		<maven.plugincheckstyle.version>2.16</maven.plugincheckstyle.version>
@@ -453,7 +453,7 @@
 				</reportSets>
 			</plugin>
 			<!-- OWASP dependencies check report-->
-			<!--<plugin>
+			<plugin>
 				<groupId>org.owasp</groupId>
 				<artifactId>dependency-check-maven</artifactId>
 				<version>${maven.pluginowasp.version}</version>
@@ -467,7 +467,7 @@
 						</reports>
 					</reportSet>
 				</reportSets>
-			</plugin>-->
+			</plugin>
 			<!-- PMD/CPD -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
